All PDF buttons hidden

--- a/Web/Pages/CCGMember/Compare/Delta.cshtml
+++ b/Web/Pages/CCGMember/Compare/Delta.cshtml
@@ -302,9 +302,9 @@
             </ol>
         </div>
     </nav>
-    <div class="mrgn-tp-md">
+    <!--<div class="mrgn-tp-md">
         <a title="@Localizer["Save PDF"]" target="_blank" href="@Url.Action("Delta","ToPdf", new { id = Model.CurrentPosition.JobTitleId, obj = Model.ObjectivePosition.JobTitleId, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})"> <span class="glyphicon glyphicon-save-file pull-right" alt="@Localizer["Save PDF"]"></span></a>
-    </div>
+    </div> -->
     <nav role="navigation">
         <h2 class="wb-inv">Document navigation</h2>
         <ul class="pager">
