--- a/Web/Pages/CCGMember/Details.cshtml
+++ b/Web/Pages/CCGMember/Details.cshtml
@@ -32,9 +32,9 @@
         </div>
     </nav>
     <div class="col-sm-12">
-        <div class="mrgn-tp-0 mrgn-bttm-md">
+       <!-- <div class="mrgn-tp-0 mrgn-bttm-md">
             <a title="@Localizer["Save PDF"]" target="_blank" href="@Url.Action("PositionDetails","ToPdf", new { id = Model.Position.JobTitleId, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})"> <span class="glyphicon glyphicon-save-file pull-right" alt="@Localizer["Save PDF"]"></span></a>
-        </div>
+        </div> -->
         <div class="clearfix"></div>
         <div class="row">
             <nav role="navigation">
