--- a/Web/Pages/CCGMember/Similar/SimilarSearch.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarSearch.cshtml
@@ -484,7 +484,7 @@ else if (Model.PageEdit)
         </div>
     </nav>
     <div class="mrgn-tp-md">
-        <a title="@Localizer["Save PDF"]" target="_blank" href="@Url.Action("SimilarList","ToPdf", new { id = Model.RouteParameter, SimilarJobIds100 = Model.SimilarJobIds100?.SimilarPositionIds, SimilarJobIds90 = Model.SimilarJobIds90?.SimilarPositionIds, SimilarJobIds80 = Model.SimilarJobIds80?.SimilarPositionIds, SimilarJobIds70 = Model.SimilarJobIds70?.SimilarPositionIds, positionid = Model.PositionId, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})"> <span class="glyphicon glyphicon-save-file pull-right" alt="@Localizer["Save PDF"]"></span></a>
+       <!-- <a title="@Localizer["Save PDF"]" target="_blank" href="@Url.Action("SimilarList","ToPdf", new { id = Model.RouteParameter, SimilarJobIds100 = Model.SimilarJobIds100?.SimilarPositionIds, SimilarJobIds90 = Model.SimilarJobIds90?.SimilarPositionIds, SimilarJobIds80 = Model.SimilarJobIds80?.SimilarPositionIds, SimilarJobIds70 = Model.SimilarJobIds70?.SimilarPositionIds, positionid = Model.PositionId, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})"> <span class="glyphicon glyphicon-save-file pull-right" alt="@Localizer["Save PDF"]"></span></a> -->
         <nav role="navigation">
             <h2 class="wb-inv">Document navigation</h2>
             <ul class="pager">
