--- a/Web/Pages/Candidate/Seagoing/Crew/Deck/PositionList.cshtml
+++ b/Web/Pages/Candidate/Seagoing/Crew/Deck/PositionList.cshtml
@@ -22,7 +22,7 @@
             </div>
         </nav>
         <div class="mrgn-tp-md">
-            <a target="_blank" title="@Localizer["save"]" href="@Url.Action("SeagoingPositionsList","ToPdf", new { seagoingIds = Model.PositionIds, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})"><span class="glyphicon glyphicon-save-file pull-right" alt="@Localizer["save"]"></span> </a>
+            <!-- <a target="_blank" title="@Localizer["save"]" href="@Url.Action("SeagoingPositionsList","ToPdf", new { seagoingIds = Model.PositionIds, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})"><span class="glyphicon glyphicon-save-file pull-right" alt="@Localizer["save"]"></span> </a> -->
             <nav role="navigation">
                 <h2 class="wb-inv">Document navigation</h2>
                 <ul class="pager">
