--- a/Web/Pages/Student/HighSchool/Shoreside/Computer.cshtml
+++ b/Web/Pages/Student/HighSchool/Shoreside/Computer.cshtml
@@ -24,7 +24,7 @@
             </div>
         </nav>
         <div class="mrgn-tp-md">
-            <a title="@Localizer["save"]" target="_blank" href="@Url.Action("StudentShoresidePositionsList", "ToPdf", new { ShoresideIds = Model.ShoresidePositionIds, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})"><span class="glyphicon glyphicon-save-file pull-right" alt="@Localizer["save"]"></span> </a>
+          <!--  <a title="@Localizer["save"]" target="_blank" href="@Url.Action("StudentShoresidePositionsList", "ToPdf", new { ShoresideIds = Model.ShoresidePositionIds, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})"><span class="glyphicon glyphicon-save-file pull-right" alt="@Localizer["save"]"></span> </a> -->
             <nav role="navigation">
                 <h2 class="wb-inv">Document navigation</h2>
                 <ul class="pager">
