--- a/Web/Pages/Student/University/Seagoing/Officer/Deck.cshtml
+++ b/Web/Pages/Student/University/Seagoing/Officer/Deck.cshtml
@@ -22,7 +22,7 @@
             </div>
         </nav>
         <div class="mrgn-tp-md">
-            <a title="@Localizer["save"]" target="_blank" href="@Url.Action("SeagoingPositionsList", "ToPdf", new { SeagoingIds = Model.SeagoingPositionIds, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})"><span class="glyphicon glyphicon-save-file pull-right" alt="@Localizer["save"]"></span> </a>
+           <!-- <a title="@Localizer["save"]" target="_blank" href="@Url.Action("SeagoingPositionsList", "ToPdf", new { SeagoingIds = Model.SeagoingPositionIds, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})"><span class="glyphicon glyphicon-save-file pull-right" alt="@Localizer["save"]"></span> </a> -->
             <nav role="navigation">
                 <h2 class="wb-inv">Document navigation</h2>
                 <ul class="pager">
