--- a/Web/Pages/Shared/_ThemeGcwu.cshtml
+++ b/Web/Pages/Shared/_ThemeGcwu.cshtml
@@ -36,8 +36,10 @@
     <meta name="dcterms.language" title="ISO639-2" content="eng">
     <!-- Meta data-->
     <link rel="apple-touch-icon" sizes="57x57 72x72 114x114 144x144 150x150" class="wb-favicon" href="/themes-dist-8.0.1-gcweb/wet-boew/assets/favicon-mobile.png">
+    <link rel="stylesheet" type="text/css" media="print" href="~/themes-dist-8.0.1-gcweb/wet-boew/css/print.css">
     <!--[if gte IE 9 | !IE ]><!-->
     <link href="~/themes-dist-8.0.1-gcweb/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
+
 
     <link rel="stylesheet" href="~/themes-dist-8.0.1-gcweb/wet-boew/css/theme.min.css">
     <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/compiled/soyutils.js"></script>
