--- a/Web/Pages/CCGMember/Similar/SimilarList.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarList.cshtml
@@ -309,7 +309,7 @@ else{
                     <tr>
                         <th class="bg-primary" width="12%">@Localizer["LEVEL"]</th>
                         <th class="bg-primary" width="75%">@Localizer["POSITION"]</th>
-                        <th class="bg-primary" width="13%"></th>
+                        <th class="bg-primary hidden-print" width="13%"></th>
                     </tr>
                     @foreach (var position in Model.SeventyPercentPositions.Where(e => e.Active != 0))
                     {
@@ -338,7 +338,7 @@ else{
                         <tr>
                             <td>@position.LevelCode</td>
                             <td>@(isEnglish? position.JobTitleEng: position.JobTitleFre)</td>
-                            <td><a asp-page="SimilarDetails" asp-all-route-data="@routedatanext" role="button">@Localizer["More Details"]</a></td>
+                            <td class="hidden-print"><a asp-page="SimilarDetails" asp-all-route-data="@routedatanext" role="button">@Localizer["More Details"]</a></td>
                         </tr>
                     }
                 </tbody>
@@ -353,7 +353,7 @@ else{
                     <tr>
                         <th class="bg-primary" width="12%">@Localizer["LEVEL"]</th>
                         <th class="bg-primary" width="75%">@Localizer["POSITION"]</th>
-                        <th class="bg-primary" width="13%"></th>
+                        <th class="bg-primary hidden-print" width="13%"></th>
                     </tr>
                     @foreach (var position in Model.EightyPercentPositions.Where(e => e.Active != 0))
                     {
@@ -382,7 +382,7 @@ else{
                         <tr>
                             <td>@position.LevelCode</td>
                             <td>@(isEnglish? position.JobTitleEng: position.JobTitleFre)</td>
-                            <td><a asp-page="SimilarDetails" asp-all-route-data="@routedatanext" role="button">@Localizer["More Details"]</a></td>
+                            <td class="hidden-print"><a asp-page="SimilarDetails" asp-all-route-data="@routedatanext" role="button">@Localizer["More Details"]</a></td>
                         </tr>
                     }
                 </tbody>
@@ -397,7 +397,7 @@ else{
                     <tr>
                         <th class="bg-primary" width="12%">@Localizer["LEVEL"]</th>
                         <th class="bg-primary" width="75%">@Localizer["POSITION"]</th>
-                        <th class="bg-primary" width="13%"></th>
+                        <th class="bg-primary hidden-print" width="13%"></th>
                     </tr>
                     @foreach (var position in Model.NinetyPercentPositions.Where(e => e.Active != 0))
                     {
@@ -426,7 +426,7 @@ else{
                         <tr>
                             <td>@position.LevelCode</td>
                             <td>@(isEnglish? position.JobTitleEng: position.JobTitleFre)</td>
-                            <td><a asp-page="SimilarDetails" asp-all-route-data="@routedatanext" role="button">@Localizer["More Details"]</a></td>
+                            <td class="hidden-print"><a asp-page="SimilarDetails" asp-all-route-data="@routedatanext" role="button">@Localizer["More Details"]</a></td>
                         </tr>
                     }
                 </tbody>
@@ -441,7 +441,7 @@ else{
                     <tr>
                         <th class="bg-primary" width="12%">@Localizer["LEVEL"]</th>
                         <th class="bg-primary" width="75%">@Localizer["POSITION"]</th>
-                        <th class="bg-primary" width="13%"></th>
+                        <th class="bg-primary hidden-print" width="13%"></th>
                     </tr>
                     @foreach (var position in Model.HundredPercentPositions.Where(e => e.Active != 0))
                     {
@@ -470,7 +470,7 @@ else{
                         <tr>
                             <td>@position.LevelCode</td>
                             <td>@(isEnglish? position.JobTitleEng: position.JobTitleFre)</td>
-                            <td><a asp-page="SimilarDetails" asp-all-route-data="@routedatanext" role="button">@Localizer["More Details"]</a></td>
+                            <td class="hidden-print"><a asp-page="SimilarDetails" asp-all-route-data="@routedatanext" role="button">@Localizer["More Details"]</a></td>
                         </tr>
                     }
                 </tbody>
