--- a/Web/Pages/Candidate/Seagoing/Common/Details.cshtml
+++ b/Web/Pages/Candidate/Seagoing/Common/Details.cshtml
@@ -456,9 +456,9 @@ else if(!(Model.PageSubmit == "true"))
 
         <div class="col-md-12 mrgn-tp-0 mrgn-bttm-md">
             <h2 class="mrgn-tp-0">@Localizer["curdetails"]</h2>
-            <h3 class="mrgn-tp-0">@Localizer["Question1"]</h3>
-            <a class="btn btn-primary mrgn-rght-md" type="button" asp-all-route-data="routedatacompare" asp-page="../../../CCGMember/Compare/AllObjective">@Localizer["Compare"]</a>
-            <button class="btn btn-primary mrgn-rght-md">@Localizer["Similar"]</button>
+            <h3 class="mrgn-tp-0 hidden-print">@Localizer["Question1"]</h3>
+            <a class="btn btn-primary mrgn-rght-md hidden-print" type="button" asp-all-route-data="routedatacompare" asp-page="../../../CCGMember/Compare/AllObjective">@Localizer["Compare"]</a>
+            <button class="btn btn-primary mrgn-rght-md hidden-print">@Localizer["Similar"]</button>
             <!-- <p><a style="text-decoration:none" title="@Localizer["infocomparesimilar"]" href="#info" aria-controls="mid-screen" class="overlay-lnk" role="button"><small>@Localizer["infocomparesimilar"]</small></a></p>
             <section id="info" class="wb-overlay modal-content overlay-def wb-popup-mid">
                 <header class="modal-header">
