--- a/Web/Pages/Candidate/Shoreside/SimilarDetails.cshtml
+++ b/Web/Pages/Candidate/Shoreside/SimilarDetails.cshtml
@@ -425,9 +425,9 @@ else if (!(Model.PageSubmit == "true"))
         <form asp-all-route-data="RouteParameter" method="post">
             <div class="col-md-12 mrgn-tp-0 mrgn-bttm-md">
                 <h2 class="mrgn-tp-0 mrgn-bttm-0">@Localizer["Current Position"]</h2>
-                <h3>@Localizer["Question1"]</h3>
-                <a class="btn btn-primary mrgn-rght-md" type="button" asp-all-route-data="@paramdata" asp-page="../../CCGMember/Compare/AllObjective">@Localizer["Compare"]</a>
-                <button class="btn btn-primary mrgn-rght-md" asp-all-route-data="@paramdata">@Localizer["Similar"]</button>
+                <h3 class="hidden-print">@Localizer["Question1"]</h3>
+                <a class="btn btn-primary mrgn-rght-md hidden-print" type="button" asp-all-route-data="@paramdata" asp-page="../../CCGMember/Compare/AllObjective">@Localizer["Compare"]</a>
+                <button class="btn btn-primary mrgn-rght-md hidden-print" asp-all-route-data="@paramdata">@Localizer["Similar"]</button>
             </div>
 
             <table class="table table-hover table-bordered mrgn-tp-md" width="100%" border="0" cellspacing="0" cellpadding="0">
