--- a/Web/Pages/Student/College/Shoreside/Electrical.cshtml
+++ b/Web/Pages/Student/College/Shoreside/Electrical.cshtml
@@ -36,7 +36,7 @@
                     <tr>
                         <th class="bg-primary" width="12%">@Localizer["level"]</th>
                         <th class="bg-primary" width="73%">@Localizer["position"]</th>
-                        <th class="bg-primary" width="15%"></th>
+                        <th class="bg-primary hidden-print" width="15%"></th>
                     </tr>
                     @if (Model.ShoreSidePositions.Any(e => e.Active != 0))
                     {
@@ -51,7 +51,7 @@
                             <tr>
                                 <td>@position.LevelCode</td>
                                 <td>@(isEnglish ? position.JobTitleEng : position.JobTitleFre)</td>
-                                <td><a asp-page="../../../Candidate/Shoreside/SimilarDetails" asp-all-route-data="@routedata" role="button">@Localizer["More Details"]</a></td>
+                                <td class="hidden-print"><a asp-page="../../../Candidate/Shoreside/SimilarDetails" asp-all-route-data="@routedata" role="button">@Localizer["More Details"]</a></td>
                             </tr>
                         }
                     }
